src-tauri/src/asciiscript/snapshots/annot_lib__asciiscript__tests__spacer_at_end.snap
---
source: src/asciiscript/tests.rs
expression: "render(r#\"layout {\n        window width:40 {\n            row { button \"Left-aligned\" spacer }\n        }\n    }\"#).unwrap()"
---
+--------------------------------------+
|                                      |
| [ Left-aligned ]                     |
|                                      |
+--------------------------------------+
