src-tauri/src/asciiscript/snapshots/annot_lib__asciiscript__tests__spacer_at_start.snap
---
source: src/asciiscript/tests.rs
expression: "render(r#\"layout {\n        window width:40 {\n            row { spacer button \"Right-aligned\" }\n        }\n    }\"#).unwrap()"
---
+--------------------------------------+
|                                      |
|                    [ Right-aligned ] |
|                                      |
+--------------------------------------+
