src-tauri/src/asciiscript/snapshots/annot_lib__asciiscript__tests__text_aligned.snap
---
source: src/asciiscript/tests.rs
expression: "render(r#\"layout {\n        window width:30 {\n            text \"Left\" align:left\n            text \"Center\" align:center\n            text \"Right\" align:right\n        }\n    }\"#).unwrap()"
---
+----------------------------+
|                            |
| Left                       |
|           Center           |
|                      Right |
|                            |
+----------------------------+
