src-tauri/src/asciiscript/snapshots/annot_lib__asciiscript__tests__text_simple.snap
---
source: src/asciiscript/tests.rs
expression: "render(r#\"layout { text \"Hello, World!\" }\"#).unwrap()"
---
Hello, World!
