src-tauri/src/asciiscript/snapshots/annot_lib__asciiscript__tests__text_with_newlines.snap
---
source: src/asciiscript/tests.rs
expression: "render(r#\"layout { text \"Line one\\nLine two\\nLine three\" }\"#).unwrap()"
---
Line one
Line two
Line three
