src-tauri/src/asciiscript/snapshots/annot_lib__asciiscript__tests__truncated_select_value.snap
---
source: src/asciiscript/tests.rs
expression: "render(r#\"layout { select \"This value is way too long to fit\" width:15 }\"#).unwrap()"
---
[This value … v]
